Added Modernist font, and updated the CSS for H1

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Audio Upload Form</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
 
     <div class="container">
-        <h1>Audio Upload Form</h1>
+        <h1>Nebula</h1>
         <form id="uploadForm" enctype="multipart/form-data">
             <input type="file" id="audioFile" accept="audio/*" required>
             <button type="submit">Upload</button>
