Customized Nebula color and size

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
 <body>
 
     <div class="container">
-        <h1>Nebula</h1>
+        <h1 class="nebula-logo">Nebula</h1>
         <form id="uploadForm" enctype="multipart/form-data">
             <input type="file" id="audioFile" accept="audio/*" required>
             <button type="submit">Upload</button>
