--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,16 +21,19 @@
         <div id="dropZone" class="drop-zone">
             <label for="audioFile" class="drop-label">Click or Drag & Drop Audio File Here</label>
             <input type="file" id="audioFile" accept="audio/*" style="display: none;">
-        </div>        
-        
+        </div>
 
         <!-- Status Message -->
         <p id="status"></p>
     </div>
 
+    <div class="character">
+        <img src="/frontend/media/Nebula-003.png" alt="nebula" id="nebula-image">
+    </div>
+
     <!-- Background Flare Video -->
     <video autoplay muted loop id="background-video">
-        <source src="/frontend/media/flares.mp4" type="video/mp4">
+        <!-- <source src="/frontend/media/flares.mp4" type="video/mp4"> -->
     </video>
 
     <script src="index.js"></script>
