Removed flare video div

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,14 +27,10 @@
         <p id="status"></p>
     </div>
 
+    <!-- Nebula Character -->
     <div class="character">
         <img src="/frontend/media/Nebula-003.png" alt="nebula" id="nebula-image">
     </div>
-
-    <!-- Background Flare Video -->
-    <video autoplay muted loop id="background-video">
-        <!-- <source src="/frontend/media/flares.mp4" type="video/mp4"> -->
-    </video>
 
     <script src="index.js"></script>
 </body>
