Data Now Shows up on front end.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,8 @@
             <input type="file" id="audioFile" accept="audio/*" style="display: none;">
         </div>
 
-        <div id="predictionResult">
+        <!-- Container for displaying predicted labels -->
+        <div id="predictedLabels"></div>
             
         </div>
 
@@ -40,7 +41,7 @@
         <!-- <source src="/frontend/media/flares.mp4" type="video/mp4"> -->
     </video>
 
-    <script src="upload.js"></script>
+
     <script src="index.js"></script>
 </body>
 
