Refactored index.js into separate js files

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,8 +50,11 @@
 
 
     </div>
+
     <!-- SCRIPTS -->
-    <script src="index.js"></script>
+    <script src="scripts/eventHandlers.js"></script>
+    <script src="scripts/fileUpload.js"></script>
+    <script src="scripts/displayLabels.js"></script>
 </body>
 
 </html>
