--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,6 +22,8 @@
         <!-- Logo -->
         <div class="logo-container">
             <h1 class="nebula-logo">NEBULA</h1>
+            <p>Revealing Musical Layers. Explore Sound's DNA.</p>
+
         </div>
 
         <div class="site-container">
