Added logo on the top of page.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,10 @@
     <div class="container">
         <!-- Logo -->
         <div class="logo-container">
-            <h1 class="nebula-logo">NEBULA</h1>
+            <div>
+                <img class="nebula-logo" src="media/Nebula-Cherry.png">
+                <h1 class="nebula-logo-text">NEBULA</h1>
+            </div>
             <p>Revealing Musical Layers. Explore Sound's DNA.</p>
 
         </div>
