Added whole page overlay when user drgas a file to browser

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,14 +19,29 @@
 <body>
 
     <div class="container">
+        
+        <!-- Overlay for drag and drop -->
+        <div id="overlay" class="overlay">
+
+            <!-- Logo -->
+            <div class="logo-container">
+                <div>
+                    <img class="nebula-logo" src="media/Nebula-White.png">
+                </div>
+            </div>
+
+            <!-- Overlay text -->
+            <div class="overlay-content">
+                <p>Drop it like it's hot</p>
+                <p>Upload files or folders by dropping them in this window</p>
+            </div>
+        </div>
+
         <!-- Logo -->
         <div class="logo-container">
             <div>
                 <img class="nebula-logo" src="media/Nebula-Cherry.png">
-                <h1 class="nebula-logo-text">NEBULA</h1>
             </div>
-            <p>Revealing Musical Layers. Explore Sound's DNA.</p>
-
         </div>
 
         <div class="site-container">
@@ -38,6 +53,14 @@
 
             <!-- Audio Upload Form -->
             <div class="upload-form-container">
+
+                <div class="logo-container">
+                    <div>
+                        <h1 class="nebula-logo-text">NEBULA</h1>
+                    </div>
+                    <p>Revealing Musical Layers. Explore Sound's DNA.</p>
+
+                </div>
 
                 <!-- Drop Zone -->
                 <div id="dropZone" class="drop-zone">
