Fixed two logo containers when overlay is shown and hidden

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
 
     <!-- LAYOUTS -->
     <link rel="stylesheet" type="text/css" href="styles/global.css">
-    <link rel="stylesheet" type="text/css" href="styles/header.css">
+    <link rel="stylesheet" type="text/css" href="styles/text.css">
     <link rel="stylesheet" type="text/css" href="styles/containers.css">
 
     <!-- SPECIFIC OBJECTS -->
@@ -19,22 +19,26 @@
 <body>
 
     <div class="container">
-        
+
         <!-- Overlay for drag and drop -->
         <div id="overlay" class="overlay">
 
-            <!-- Logo -->
-            <div class="logo-container">
-                <div>
-                    <img class="nebula-logo" src="media/Nebula-White.png">
+            <div class="overlay-container">
+                <!-- Logo -->
+                <div class="logo-container">
+                    <div>
+                        <img class="nebula-logo" src="media/Nebula-White.png">
+                    </div>
+                </div>
+
+                <!-- Overlay text -->
+                <div class="overlay-content">
+                    <h1>Drop it like it's hot</h1>
+                    <br>
+                    <p>Upload audio files by dropping them in this window</p>
                 </div>
             </div>
 
-            <!-- Overlay text -->
-            <div class="overlay-content">
-                <p>Drop it like it's hot</p>
-                <p>Upload files or folders by dropping them in this window</p>
-            </div>
         </div>
 
         <!-- Logo -->
