Added animations to logo

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
             <div class="overlay-container">
                 <!-- Logo -->
                 <div class="logo-container">
-                    <div>
+                    <div class="nebula-logo-container">
                         <img class="nebula-logo" src="media/Nebula-White.png">
                     </div>
                 </div>
@@ -43,7 +43,7 @@
 
         <!-- Logo -->
         <div class="logo-container">
-            <div>
+            <div class="nebula-logo-container">
                 <img class="nebula-logo" src="media/Nebula-Cherry.png">
             </div>
         </div>
