Added logic to only show the prediction labels when animation is done

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -64,11 +64,11 @@
                     Your browser does not support the video tag.
                 </video>
             </div>
-            
+
 
             <!-- 03 - Done -->
             <div class="character-container" style="display: none;">
-                <img src="media/NBL-03-Done.png"  alt="nebula" id="nebula-image">
+                <img src="media/NBL-03-Done.png" alt="nebula" id="nebula-image">
             </div>
 
 
@@ -90,7 +90,8 @@
                 </div>
 
                 <!-- Container for displaying predicted labels -->
-                <div id="predictedLabels"></div>
+                <div id="predictedLabels" style="display: none;"></div>
+
 
                 <!-- Status Message -->
                 <p id="status"></p>
